--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,13 +1,22 @@
-adafruit-pca9685
-rpi_ws281x
-mpu6050-raspberrypi
 flask
 flask_cors
 websockets
+opencv-contrib-python
 numpy
-opencv-contrib-python==3.4.3.18
 imutils
 zmq
 pybase64
 psutil
 luma.oled
+adafruit-pca9685
+rpi_ws281x
+mpu6050-raspberrypi
+picamera
+picamera2
+greenlet
+thread
+RPi.GPIO
+zmq
+mpu6050
+Adafruit_PCA9685
+luma
